# RustyBeemo

./: Cargo.toml  test.bat  update.sh
src/: main.rs
src/commands/: age.rs  move_here.rs  ping.rs  register.rs  say.rs  self_update.rs  shutdown.rs  steal_profile_pic.rs  warn.rs
src/commands/music/: clear.rs  leave.rs  nowplaying.rs  pause.rs  play.rs  queue.rs  resume.rs  shuffle.rs  skip.rs  stop.rs
src/util/: globals.rs
